src/index.css
@import "reset.css";

:root {
	--text: #3e334c;
	--text-h: #08060d;
	--border: #3e334c;
	--bg: #fff8ee;

	--mono: "Syne Mono", monospace;

	font: 18px var(--mono);
	letter-spacing: 0.18px;
	color: var(--text);
	background: var(--bg);
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;

	@media (max-width: 1024px) {
		font-size: 16px;
	}
}

@media (prefers-color-scheme: dark) {
	:root {
		--text: #ced1d8;
		--text-h: #f3f4f6;
		--border: #ced1d8;
		--bg: #2d2339;
	}
}

body {
	margin: 0;
}

#root {
	text-align: center;
	min-height: 100svh;
}

main {
	display: flex;
	align-items: center;
	flex-direction: column;
	gap: 16px;
	margin: 24px 0;
	justify-content: center;
	min-height: 100svh;
}

h1,
h2 {
	color: var(--text-h);
}

h1 {
	font-size: 56px;
	letter-spacing: -1.68px;

	@media (max-width: 1024px) {
		font-size: 36px;
	}
}

h2 {
	font-size: 24px;
	line-height: 118%;
	letter-spacing: -0.24px;
	margin: 0 0 8px;

	@media (max-width: 1024px) {
		font-size: 20px;
	}
}

p {
	margin: 0;
}

button {
	font-size: 24px;
	border: 2px solid var(--border);
	padding: 5px 10px;
	transition: background ease-in-out 0.2s;
}

button:hover {
	background-color: color-mix(in srgb, var(--border), var(--bg) 70%);
}

button:focus-visible {
	outline: 2px solid var(--border);
	outline-offset: 1px;
}

button:active {
	transition: none;
	color: color-mix(in srgb, var(--bg), transparent 30%);
	background-color: var(--border);
}

.visualizer__wrapper {
	width: 100%;
	max-width: 600px;
}

canvas {
	width: 100%;
	height: auto;
	background-color: black;
	border: 1px solid var(--border);
}

